--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
              <div class="about_title">
                 <div class="content">
-                     <a  href="https://tr.mnads.tech">
+                     <a  href="https://jp.lovehome.site">
                          联系我们获取营销计划</a>
                 </div>
             </div>
@@ -86,7 +86,7 @@
             </h1>
             <p>搜索广告、购物广告、展示广告、视频广告、应用广告
             <br>社交广告、贴文广告</p>
-                                                <a href="https://tr.mnads.tech">
+                                                <a href="https://jp.lovehome.site">
                                                     联系我们咨询最优方案</a>
                                     </div>
         <div class="img">
@@ -105,7 +105,7 @@
                 <
                 
                 <div class="auth">
-                <a href="https://tr.mnads.tech">联系我们</a>
+                <a href="https://jp.lovehome.site">联系我们</a>
                                                             </div>
             </section>
             <section class="footer-bottom">
@@ -115,10 +115,10 @@
                     <a href="terms-of-use">Terms of use</a>
                 </div>
                 <div class="social">
-                    <a class="s_icon01" href="https://tr.mnads.tech" target="_blank"></a>
-                    <a class="s_icon02" href="https://tr.mnads.tech" target="_blank"></a>
-                    <a class="s_icon03" href="https://tr.mnads.tech" target="_blank"></a>
-                    <a class="s_icon04" href="https://tr.mnads.tech" target="_blank"></a>
+                    <a class="s_icon01" href="https://jp.lovehome.site" target="_blank"></a>
+                    <a class="s_icon02" href="https://jp.lovehome.site" target="_blank"></a>
+                    <a class="s_icon03" href="https://jp.lovehome.site" target="_blank"></a>
+                    <a class="s_icon04" href="https://jp.lovehome.site" target="_blank"></a>
                 </div>
                 <div class="pay-info">
                   
